# ersultan-diplom

./: .gitignore  pyproject.toml
accounts/: forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_initial.py  0003_usermodel_email_news_usermodel_push_notifications_and_more.py
rental/: admin.py  context_processors.py  filters.py  forms.py  models.py  urls.py  views.py
rental/migrations/: 0001_initial.py  0002_alter_carlocation_options_alter_carreview_options_and_more.py  0002_car_status.py  0002_remove_carphoto_car_car_photos.py  0002_rental_is_active.py  0003_alter_car_photos.py  0003_car_air_conditioner_available_car_seats.py  0003_remove_rental_is_active.py  0004_alter_car_main_image.py  0004_alter_rental_status_notification_favorite.py  0004_car_doors.py  0005_car_distance.py
rental/templatetags/: custom_tags.py
src/: settings.py  urls.py
static/css/: output.css
templates/: about.html  active_rentals.html  base.html  blog.html  cancel_rental_confirmation.html  car_detail.html  car_favourites.html  car_list.html  car_reviews.html  car_search.html  contact.html  dealers_detail.html  faq.html  finish_rental.html  home.html  how_it_works.html  notifications.html  privacy.html  processing.html  profile.html  receipt.html  rent_car.html  rental_detail.html  rental_success.html  retailer_car_tracking_history.html  retailer_tracking_dashboard.html  retailers_dashboard.html  service_conditions.html  settings.html  terms_of_rent.html  terms_of_use.html  wallet.html
templates/accounts/: dashboard.html  login.html  logout.html  (+5 more)
(+10 files in other folders)
